compile pas